FactureForgeBackend/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend-deployment
    namespace: facture-forge-staging
spec:
    replicas: 1
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxUnavailable: 0
            maxSurge: 1
    selector:
        matchLabels:
            app: backend-deployment
    template:
        metadata:
            labels:
                app: backend-deployment
        spec:
            automountServiceAccountToken: false
            containers:
                -   name: backend-deployment
                    image: "rhaversen/facture-forge-backend:4fce3aa5c0cefc9457c3d1ff12b70696cdaaca0e"
                    imagePullPolicy: Always
                    livenessProbe:
                        httpGet:
                            path: api/service/livez
                            port: 5000
                        periodSeconds: 10
                        initialDelaySeconds: 15
                        failureThreshold: 5
                    readinessProbe:
                        httpGet:
                            path: api/service/readyz
                            port: 5000
                        periodSeconds: 10
                        initialDelaySeconds: 15
                        failureThreshold: 5
                    ports:
                        -   containerPort: 5000
